--- a/hello.html
+++ b/hello.html
@@ -12,6 +12,8 @@
 
   <h1>Welcome To My Git Testing Page!</h1>
 
+  <h2>Practicing to utilise GitHub and Git's Functionality!</h2>
+
   <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nulla iste ratione impedit vitae excepturi pariatur amet nemo incidunt! Maxime soluta laborum iure atque, natus ducimus eveniet. Qui, magnam eos.
     <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
